# Beacon-AI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
beacon/backend/: app.py
beacon/cli/: cli.py  main.py
beacon/config/: default_config.yaml
beacon/core/: base.py
beacon/data/: __init__.py  cache.py  clinical_processor.py  dataset.py  factory.py  genomic_processor.py  image_processor.py  iterator.py  loader.py  pipeline.py  processor.py  transformer.py  validator.py
beacon/evaluation/: metrics.py
beacon/examples/: adaptive_ensemble_example.py  adaptive_learning_example.py  advanced_ensemble_example.py  advanced_robustness_example.py  basic_example.py  ensemble_example.py  feature_selector_example.py  genomic_analysis_example.py  gnn_example.py  image_classification_example.py  image_processing_example.py  integrated_analysis.py  interpretability_example.py  multimodal_example.py  (+5 more)
docs/: technical_documentation.md  user_manual.md
tests/: test_adaptive_ensemble.py  test_adaptive_learning.py  test_advanced_ensemble.py  test_advanced_features.py  test_advanced_robustness.py  test_basic.py  test_ensemble.py  test_feature_selector.py  test_genomic_model.py  test_gnn.py  test_image_classifier.py  test_image_interpretability.py  test_image_processor.py  test_integration.py  test_interpretability.py  test_metrics.py  test_multimodal.py  test_multimodal_interpreter.py  test_performance.py  test_processor.py  test_robustness_analyzer.py  test_survival_model.py  test_transformer.py
(+63 files in other folders)
