[tool.poetry]
name = "beacon"
version = "0.1.0"
description = "Medical Image Analysis Framework with Interpretability"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "beacon"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
torchvision = "^0.10.0"
numpy = "^1.19.0"
pandas = "^1.3.0"
scikit-learn = "^0.24.0"
matplotlib = "^3.4.0"
seaborn = "^0.11.0"
pillow = "^8.3.0"
opencv-python = "^4.5.0"
captum = "^0.4.0"
click = "^8.0.0"
tqdm = "^4.62.0"
pyyaml = "^5.4.0"
jsonschema = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-cov = "^2.10.0"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.9.0"
mypy = "^0.910"
sphinx = "^4.0.0"
sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
beacon = "beacon.cli.main:cli"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=beacon --cov-report=html"
